--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
   <!-- Default screen margins, per the Android Design guidelines. -->
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+  <dimen name="activity_vertical_margin_half">8dp</dimen>
+  <dimen name="number_item_size">80dp</dimen>
+  <dimen name="number_picker_size">96dp</dimen>
 </resources>
